--- a/styles/container/profile-page-css/components/bio_profile.module.css
+++ b/styles/container/profile-page-css/components/bio_profile.module.css
@@ -33,3 +33,16 @@
     color: var(--black-blue);
     letter-spacing: 0.01rem;
 }
+.bio_profile textarea{
+    width: 100%;
+    height: 20rem;
+    resize: vertical;
+    font-size: 0.8rem;
+    font-family: var(--poppins);
+    font-weight: 400;
+    color: var(--black-blue);
+    letter-spacing: 0.01rem;
+    background: none;
+    outline: none;
+    border: none;
+}
